change initial values of stats

--- a/graph-viz/app/views/index.scala.html
+++ b/graph-viz/app/views/index.scala.html
@@ -99,10 +99,10 @@
             <div id="stats">
                 <div class="bottomleft">
                     <p id="tweetsCnt">Tweets Count: 15722639</p>
-                    <p id="pointsCnt">Points Count: </p>
-                    <p id="clustersCnt">Clusters Count: </p>
-                    <p id="edgesCnt">Edges Count: </p>
-                    <p id="bundledEdgesCnt">Bundled Edges Count: </p>
+                    <p id="pointsCnt">Points Count: 0</p>
+                    <p id="clustersCnt">Clusters Count: 0</p>
+                    <p id="edgesCnt">Edges Count: 0</p>
+                    <p id="bundledEdgesCnt">Bundled Edges Count: 0</p>
                     <p id="clusteringAlgo">Clustering Algorithm: HGC</p>
                     <p id="bundlingAlgo">Bundling Algorithm: FDEB</p>
                 </div>
