clean code in graph controller

--- a/graph-viz/app/views/index.scala.html
+++ b/graph-viz/app/views/index.scala.html
@@ -308,6 +308,8 @@
                         clustering: clustering_control,
                         zoom: zoom,
                         timestamp: current_timestamp,
+                        bundling: 0,
+                        treeCut: 0,
                         option: 1
                     };
                     const sendingJSON = JSON.stringify(sendingObj);
